# Junban

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  eslint.config.js  index.html  install.sh  llms.txt  package.json  playwright.config.ts  pnpm-lock.yaml  sources.json  vite-api-plugin.ts  vite.config.ts  vitest.config.ts
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  production_hotfix.yml  release_tracking.yml
.github/PULL_REQUEST_TEMPLATE/: production_hotfix.md  release_promotion.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  index.md  manifest.md
docs/backend/: AI.md  CLI.md  CORE.md  DATABASE.md  FILES.md  MCP.md  PARSER.md  PLUGINS.md  STORAGE.md  UTILS.md  VOICE.md
docs/development/: STATUS.md
docs/explanation/: README.md  ai-and-mcp.md  architecture.md  plugin-system.md  storage-model.md
docs/frontend/: API_LAYER.md  COMPONENTS.md  CONTEXT.md  FILES.md  HOOKS.md  SHORTCUTS.md  THEMES.md  VIEWS.md
scripts/: create-plugin.ts  docs-check.ts  install-linux.sh  prepare-release.ts  prepare-tauri-sidecar.mjs  run-with-profile.mjs  setup-dev.ts  validate-tauri-sidecar.mjs
src/: bootstrap-web.ts  bootstrap.ts  main.ts  server.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  tauri_paths.rs
vite-api-routes/: ai.ts  comments.ts  index.ts  misc.ts  plugins.ts  projects.ts  sections.ts  settings.ts  stats.ts  tags.ts  tasks.ts  templates.ts  types.ts  voice.ts
(+707 files in other folders)
