[package]
name = "asf-junban"
version = "1.0.1"
description = "ASF Junban — Open-source task management with an Obsidian-style plugin system"
authors = ["ASF Community"]
edition = "2021"

[lib]
name = "asf_junban_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "=2.5.5", features = [] }

[dependencies]
tauri = { version = "=2.10.2", features = [] }
tauri-plugin-fs = "=2.4.5"
tauri-plugin-updater = "=2.10.0"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
