[package]
name = "asf-junban"
version = "1.0.8"
description = "Junban — Open-source local-first task management"
authors = ["Artificial Source"]
edition = "2021"

[lib]
name = "asf_junban_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "=2.5.5", features = [] }

[dependencies]
tauri = { version = "=2.10.2", features = [] }
tauri-plugin-fs = "=2.4.5"
tauri-plugin-dialog = "=2.6.0"
tauri-plugin-updater = "=2.10.0"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
axum = "0.8"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "net", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
socket2 = "0.5"
